feat: :fire: pagination favorites contacts
