# app/Http/Controllers/UserController.php
@@ -32,13 +32,8 @@ class UserController extends Controller
      *     security={ {"bearerAuth": {} } },
      *     @OA\RequestBody(
      *         required=true,
-     *         description="Password change data",
-     *         @OA\JsonContent(
-     *             required={"password", "new_password", "new_password_confirmation"},
-     *             @OA\Property(property="password", type="string", format="password", example="old_password"),
-     *             @OA\Property(property="new_password", type="string", format="password", example="new_password"),
-     *             @OA\Property(property="new_password_confirmation", type="string", format="password", example="new_password"),
-     *         ),
+     *         description="Datos requeridos para cambiar la contraseña",
+     *         @OA\JsonContent(ref="#/components/schemas/UserChangePasswordRequest"),
      *     ),
      *     @OA\Response(
      *         response=200,
@@ -93,64 +88,63 @@ class UserController extends Controller
     }
 
     /**
- * @OA\Post(
- *     path="/auth/check-password",
- *     summary="Check the user's password",
- *     description="Endpoint to verify if the provided password is correct",
- *     operationId="checkThePassword",
- *     tags={"User"},
- *     security={{"bearerAuth":{}}},
- *     @OA\RequestBody(
- *         required=true,
- *         @OA\JsonContent(
- *             required={"password"},
- *             @OA\Property(property="password", type="string", minLength=3, maxLength=10, example="yourpassword")
- *         )
- *     ),
- *     @OA\Response(
- *         response=200,
- *         description="Password is correct",
- *         @OA\JsonContent(
- *             @OA\Property(property="message", type="string", example="Contraseña correcta!"),
- *             @OA\Property(property="status", type="integer", example=200)
- *         )
- *     ),
- *     @OA\Response(
- *         response=401,
- *         description="Incorrect password",
- *         @OA\JsonContent(
- *             @OA\Property(property="message", type="string", example="Contraseña actual incorrecta"),
- *             @OA\Property(property="status", type="integer", example=401),
- *             @OA\Property(property="errors", type="object", example={"message":"Contraseña incorrecta"})
- *         )
- *     ),
- *     @OA\Response(
- *         response=422,
- *         description="Validation error",
- *         @OA\JsonContent(
- *             @OA\Property(property="message", type="string", example="Error de validación"),
- *             @OA\Property(property="status", type="integer", example=422),
- *             @OA\Property(property="errors", type="object", example={"password":{"El campo contraseña es obligatorio"}})
- *         )
- *     ),
- *     @OA\Response(
- *         response=404,
- *         description="User not found",
- *         @OA\JsonContent(
- *             @OA\Property(property="message", type="string", example="No existe el usuario"),
- *             @OA\Property(property="status", type="integer", example=404)
- *         )
- *     ),
- *     @OA\Response(
- *         response=500,
- *         description="Internal server error",
- *         @OA\JsonContent(
- *             @OA\Property(property="message", type="string", example="Ha ocurrido un error: {error_message}"),
- *             @OA\Property(property="status", type="integer", example=500)
- *         )
- *     )
- * )
- */
+     * @OA\Post(
+     *     path="/auth/check-password",
+     *     summary="Check the user's password",
+     *     description="Endpoint to verify if the provided password is correct",
+     *     operationId="checkThePassword",
+     *     tags={"User"},
+     *     security={{"bearerAuth":{}}},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         description="Contraseña a verificar",
+     *         @OA\JsonContent(ref="#/components/schemas/CheckThePasswordRequest"),
+     *     ),
+     *
+     *     @OA\Response(
+     *         response=200,
+     *         description="Password is correct",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Contraseña correcta!"),
+     *             @OA\Property(property="status", type="integer", example=200)
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Incorrect password",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Contraseña actual incorrecta"),
+     *             @OA\Property(property="status", type="integer", example=401),
+     *             @OA\Property(property="errors", type="object", example={"message":"Contraseña incorrecta"})
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Validation error",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Error de validación"),
+     *             @OA\Property(property="status", type="integer", example=422),
+     *             @OA\Property(property="errors", type="object", example={"password":{"El campo contraseña es obligatorio"}})
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="User not found",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="No existe el usuario"),
+     *             @OA\Property(property="status", type="integer", example=404)
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal server error",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Ha ocurrido un error: {error_message}"),
+     *             @OA\Property(property="status", type="integer", example=500)
+     *         )
+     *     )
+     * )
+     */
     public function checkThePassword(CheckThePasswordRequest $request)
     {
         try {
@@ -175,12 +169,8 @@ class UserController extends Controller
      *     security={ {"bearerAuth": {} } },
      *     @OA\RequestBody(
      *         required=true,
-     *         description="Profile update data",
-     *         @OA\JsonContent(
-     *             required={"firstName", "lastName"},
-     *             @OA\Property(property="firstName", type="string", example="John"),
-     *             @OA\Property(property="lastName", type="string", example="Doe"),
-     *         ),
+     *         description="Datos requeridos para editar el perfil de usuario",
+     *         @OA\JsonContent(ref="#/components/schemas/UserEditProfileRequest"),
      *     ),
      *     @OA\Response(
      *         response=200,
