# app/Http/Resources/paginate/PaginateResource.php
@@ -3,6 +3,9 @@
 namespace App\Http\Resources\paginate;
 
 use App\Http\Resources\contact\ContactResource;
+use App\Http\Resources\favorite\FavoriteResource;
+use App\Models\Contact;
+use App\Models\Favorite;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
@@ -15,8 +18,17 @@ class PaginateResource extends JsonResource
      */
     public function toArray(Request $request): array
     {
+        $data = $this->resource->map(function ($item) {
+            if ($item instanceof Contact) {
+                return new ContactResource($item);
+            } elseif ($item instanceof Favorite) {
+                return new FavoriteResource($item);
+            }
+            dd($item);
+            return null; // Handle other cases if necessary
+        });
         return [
-            'data' => ContactResource::collection($this->items()),
+            'data' => $data,
             'meta' => [
                 'current_page' => $this->currentPage(),
                 'from' => $this->firstItem(),
